{
    "name": "DefaultActions",
    "maps": [
        {
            "name": "Player",
            "id": "7017a8f3-5a2f-4ac8-98dc-c3c6f2725d6f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "b0159a67-6db1-4951-92fd-f6157b8423bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Swerve",
                    "type": "Value",
                    "id": "3c30b76f-87f1-4dbd-bb32-e7cf148b1361",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33badbfe-fb3f-4fc1-bf07-ee9e38b59f89",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "dccb9119-6a28-4334-afc5-113447aa2cae",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swerve",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "016a6e8c-eb83-47f7-a81c-8d3f692e65a8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swerve",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "fd71cf01-d7f8-4a6f-9667-26622992aa55",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swerve",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MousePosition",
            "id": "7ba1a485-de92-4f5c-bc46-bf3fa7c376d3",
            "actions": [
                {
                    "name": "GetMousePosition",
                    "type": "Value",
                    "id": "bb9611a6-0644-4e0b-aff3-954fc958bc1c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56317c94-2eff-4183-a277-94a139baa253",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetMousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}